// message.proto
syntax = "proto3";

package rafka;

// The service definition for Rafka
service Rafka {
    // Create a new node
    rpc CreateNode (CreateNodeRequest) returns (Empty);

    // Remove a node
    rpc RemoveNode (RemoveNodeRequest) returns (Empty);

    // Produce an event into a node's queue
    rpc ProduceEvent (ProduceEventRequest) returns (Empty);

    // Demand events from a node's queue
    rpc DemandEvent (DemandEventRequest) returns (DemandEventReply);
}

// Request to create a node
message CreateNodeRequest {
    string node_name = 1;
    int32 total_disk_size = 2;
    int32 buffer_capacity = 3;
}

// Request to remove a node
message RemoveNodeRequest {
    string node_name = 1;
}

// Request to produce an event
message ProduceEventRequest {
    string node_name = 1;
    string event = 2;
}

// Request to demand events
message DemandEventRequest {
    string node_name = 1;
    int32 num = 2;
}

// Response to demand events
message DemandEventReply {
    repeated string events = 1;
}

// Empty message for responses with no data
message Empty {}
